<?xml version="1.0" encoding="UTF-8"?>
<!--
   Copyright (c) Metadata Partners, LLC.
   All rights reserved.

   See LICENSE at root of the distribution for
   license details.        
-->
<project  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" >
 <modelVersion>4.0.0</modelVersion>
 <groupId>com.datomic</groupId>
 <artifactId>datomic-free</artifactId>
 <name>datomic-free</name>
 <version>0.9.5703.21</version>
 <organization>
  <name>Metadata Partners, LLC</name>
  <url>http://datomic.com</url>
 </organization>
 <properties>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 </properties>
 <dependencyManagement>
  <dependencies>
   <dependency>
    <groupId>com.fasterxml.jackson.core</groupId>
    <artifactId>jackson-core</artifactId>
    <version>2.6.6</version>
   </dependency>
   <dependency>
    <groupId>com.fasterxml.jackson.dataformat</groupId>
    <artifactId>jackson-dataformat-cbor</artifactId>
    <version>2.6.6</version>
   </dependency>
   <dependency>
    <groupId>com.fasterxml.jackson.core</groupId>
    <artifactId>jackson-annotations</artifactId>
    <version>2.6.6</version>
   </dependency>
   <dependency>
    <groupId>com.fasterxml.jackson.core</groupId>
    <artifactId>jackson-databind</artifactId>
    <version>2.9.10.7</version>
   </dependency>
   <dependency>
    <groupId>com.fasterxml.jackson.datatype</groupId>
    <artifactId>jackson-datatype-joda</artifactId>
    <version>2.6.6</version>
   </dependency>
  </dependencies>
 </dependencyManagement>
 <dependencies>
  <dependency>
   <groupId>org.clojure</groupId>
   <artifactId>clojure</artifactId>
   <version>1.8.0</version>
  </dependency>
  <dependency>
   <groupId>org.clojure</groupId>
   <artifactId>tools.cli</artifactId>
   <version>0.3.5</version>
   <exclusions>
    <exclusion>
     <groupId>org.clojure</groupId>
     <artifactId>clojure</artifactId>
    </exclusion>
   </exclusions>
  </dependency>
  <dependency>
   <groupId>org.fressian</groupId>
   <artifactId>fressian</artifactId>
   <version>0.6.5</version>
  </dependency>
  <dependency>
   <groupId>commons-codec</groupId>
   <artifactId>commons-codec</artifactId>
   <version>1.10</version>
  </dependency>
  <dependency>
   <groupId>org.slf4j</groupId>
   <artifactId>jul-to-slf4j</artifactId>
   <version>1.7.7</version>
  </dependency>
  <dependency>
   <groupId>org.slf4j</groupId>
   <artifactId>slf4j-nop</artifactId>
   <version>1.7.7</version>
  </dependency>
  <dependency>
   <groupId>org.slf4j</groupId>
   <artifactId>log4j-over-slf4j</artifactId>
   <version>1.7.7</version>
   <scope>runtime</scope>
  </dependency>
  <dependency>
   <groupId>org.slf4j</groupId>
   <artifactId>jcl-over-slf4j</artifactId>
   <version>1.7.7</version>
  </dependency>
  <dependency>
   <groupId>org.apache.activemq</groupId>
   <artifactId>artemis-core-client</artifactId>
   <version>1.5.6</version>
   <exclusions>
    <exclusion>
     <groupId>org.jgroups</groupId>
     <artifactId>jgroups</artifactId>
    </exclusion>
    <exclusion>
     <groupId>commons-logging</groupId>
     <artifactId>commons-logging</artifactId>
    </exclusion>
   </exclusions>
  </dependency>
  <dependency>
   <groupId>io.netty</groupId>
   <artifactId>netty-all</artifactId>
   <version>4.1.32.Final</version>
  </dependency>
  <dependency>
   <groupId>com.datomic</groupId>
   <artifactId>client-api</artifactId>
   <version>0.8.35</version>
  </dependency>
  <dependency>
   <groupId>com.datomic</groupId>
   <artifactId>query-support</artifactId>
   <version>0.8.16</version>
  </dependency>
  <dependency>
   <groupId>com.h2database</groupId>
   <artifactId>h2</artifactId>
   <version>1.3.171</version>
  </dependency>
  <dependency>
   <groupId>com.datomic</groupId>
   <artifactId>datomic-lucene-core</artifactId>
   <version>3.3.0</version>
  </dependency>
  <dependency>
   <groupId>com.google.guava</groupId>
   <artifactId>guava</artifactId>
   <version>18.0</version>
  </dependency>
  <dependency>
   <groupId>org.apache.tomcat</groupId>
   <artifactId>tomcat-jdbc</artifactId>
   <version>7.0.27</version>
   <exclusions>
    <exclusion>
     <groupId>commons-logging</groupId>
     <artifactId>commons-logging</artifactId>
    </exclusion>
   </exclusions>
  </dependency>
  <dependency>
   <groupId>commons-collections</groupId>
   <artifactId>commons-collections</artifactId>
   <version>3.2.2</version>
  </dependency>
  <dependency>
   <groupId>org.codehaus.janino</groupId>
   <artifactId>commons-compiler-jdk</artifactId>
   <version>3.0.12</version>
  </dependency>
 </dependencies>
 <build>
  <sourceDirectory>src/java</sourceDirectory>
  <resources>
   <resource>
    <directory>src/resources</directory>
   </resource>
  </resources>
  <plugins>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-enforcer-plugin</artifactId>
    <version>1.0-alpha-3</version>
    <executions>
     <execution>
      <id>ban-other-loggers</id>
      <goals>
       <goal>enforce</goal>
      </goals>
      <configuration>
       <rules>
        <bannedDependencies>
         <searchTransitive>true</searchTransitive>
         <excludes>
          <exclude>log4j:log4j</exclude>
          <exclude>commons-logging</exclude>
          <exclude>org.slf4j:slf4j-log4j12</exclude>
         </excludes>
         <message>Secondary logging frameworks are banned in preference to org.slf4j:*-over-slf4j</message>
        </bannedDependencies>
       </rules>
      </configuration>
     </execution>
    </executions>
   </plugin>
   <plugin>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>2.3.2</version>
    <configuration>
     <source>1.6</source>
     <target>1.6</target>
     <additionalClasspathElements>
      <additionalClasspathElement>src/resources</additionalClasspathElement>
     </additionalClasspathElements>
    </configuration>
   </plugin>
   <plugin>
    <groupId>org.codehaus.mojo</groupId>
    <artifactId>build-helper-maven-plugin</artifactId>
    <version>1.5</version>
    <executions>
     <execution>
      <id>add-source-dirs</id>
      <phase>generate-sources</phase>
      <goals>
       <goal>add-source</goal>
      </goals>
     </execution>
    </executions>
    <configuration>
     <sources>
      <source>src/java</source>
      <source>target/generated-sources/keywords</source>
     </sources>
    </configuration>
   </plugin>
   <plugin>
    <groupId>com.theoryinpractise</groupId>
    <artifactId>clojure-maven-plugin</artifactId>
    <version>1.3.6</version>
    <configuration>
     <vmargs>-server -Xmx1G -Xms1G -Xmn256m -XX:-PrintGCDetails -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -Dclojure.compiler.elide-meta='[:doc :file :line]'</vmargs>
     <sourceDirectories>
      <sourceDirectory>src/clj</sourceDirectory>
     </sourceDirectories>
     <copiedNamespaces>
      <namespace>!.*</namespace>
     </copiedNamespaces>
     <warnOnReflection>true</warnOnReflection>
    </configuration>
    <executions>
     <execution>
      <id>compile-clojure</id>
      <phase>compile</phase>
      <goals>
       <goal>compile</goal>
      </goals>
     </execution>
     <execution>
      <id>test-clojure</id>
      <phase>test</phase>
      <goals>
       <goal>test</goal>
      </goals>
     </execution>
    </executions>
   </plugin>
   <plugin>
    <artifactId>maven-assembly-plugin</artifactId>
    <version>2.2</version>
    <configuration>
     <descriptorId>jar-with-dependencies</descriptorId>
     <descriptors>
      <descriptor>src/assembly/all.xml</descriptor>
     </descriptors>
    </configuration>
   </plugin>
  </plugins>
  <extensions>
   <extension>
    <groupId>org.springframework.build</groupId>
    <artifactId>aws-maven</artifactId>
    <version>5.0.0.RELEASE</version>
   </extension>
  </extensions>
 </build>
 <repositories>
  <repository>
   <id>project</id>
   <url>http://mrep.s3-website-us-east-1.amazonaws.com</url>
   <releases>
    <enabled>true</enabled>
   </releases>
   <snapshots>
    <enabled>false</enabled>
   </snapshots>
  </repository>
  <repository>
   <id>Sonatype</id>
   <name>Sonatype Release</name>
   <url>https://oss.sonatype.org/content/repositories/releases</url>
   <releases>
    <enabled>true</enabled>
   </releases>
   <snapshots>
    <enabled>false</enabled>
   </snapshots>
  </repository>
  <repository>
   <id>cloud-maven</id>
   <url>s3://cloud-1fc2183a-56c5-4f05-b37d-e78b6a7daffe/maven/releases</url>
   <releases>
    <enabled>true</enabled>
   </releases>
   <snapshots>
    <enabled>false</enabled>
   </snapshots>
  </repository>
 </repositories>
</project>
